# tinyfiledialogs-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  makefile.cargo  update.sh
.github/workflows/: main.yml
examples/: main.rs
examples/tinytest/: Cargo.toml
examples/tinytest/src/: main.rs
libtinyfiledialogs/: tinyfiledialogs.c  tinyfiledialogs.h
patches/: 0002_WindowsHidpiVisualStyle.patch
src/: lib.rs
