[package]
name = "tinyfiledialogs"
description = "High-level Rust binding for the tinyfiledialogs C library."
version = "0.1.0"
authors = ["Guillaume Vareille <vareille@users.sourceforge.net>", "Josh Matthews <josh@joshmatthews.net>"]
license = "zlib-acknowledgement"

build = "build.rs"

[lib]
name = "tinyfiledialogs"

[dependencies]
libc = "0.2.0"
