[package]
name = "tinyfiledialogs"
description = "High-level Rust binding for the tinyfiledialogs C library."
version = "3.8.3"
authors = ["Guillaume Vareille <vareille@users.sourceforge.net>", "Josh Matthews <josh@joshmatthews.net>"]
license = "zlib-acknowledgement"
readme = "README.md"
keywords = ["dialog", "ui", "windows", "unix"]
repository = "https://github.com/jdm/tinyfiledialogs-rs"

build = "build.rs"

[lib]
name = "tinyfiledialogs"

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1"
